--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,14 @@
-h1 {
-    color: hotpink;
-    font-family: sans-serif;
+@use 'header.scss';
+@import 'variables.scss';
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box; /* account for any border and padding in the values you specify for an element's width and height */
+    list-style: none;
+    text-decoration: none;
+}
+
+body {
+    font-family: Helvetica, Arial, sans-serif;
 }
