--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,11 +1,16 @@
+@use 'mixins.scss' as mix;
+
 .main-content {
     width: 100%;
+    height: 100vh;
     position: relative;
     top: 0;
     left: 0;
 
     .main-image {
         width: 100%;
+        object-fit: contain;
+        border: var(--test-border);
     }
 
     .main-controls {
@@ -16,22 +21,35 @@
         transform: translateY(-50%);
 
         .main-title {
+            font-size: 4rem;
             margin-bottom: 12px;
         }
 
         .main-description {
+            font-size: 1.2rem;
             margin-bottom: 14px;
         }
 
         .main-play-btn {
-            width: 90px;
-            height: 35px;
             margin-right: 7px;
+            font-size: 1rem;
+            padding: 0.7rem 1.4rem;
+
+            i {
+                margin-right: 7px;
+                font-size: 1.3rem;
+            }
         }
 
         .main-more-info-btn {
-            width: 110px;
-            height: 35px;
+            margin-right: 7px;
+            font-size: 1rem;
+            padding: 0.7rem 1.5rem;
+
+            i {
+                margin-right: 7px;
+                font-size: 1.3rem;
+            }
         }
     }
 }
