--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,15 +1,26 @@
 @use 'mixins.scss' as mix;
 
 .main-header {
+    position: relative;
+    z-index: 99;
     width: 100%;
     height: 68px;
     padding: 0 60px;
+    color: var(--color-white);
+    background: linear-gradient(0deg, rgba(255,255,255,0) 0%, rgba(1,0,23,1) 100%);
 
     display: grid;
     grid-template-columns: 1fr 1fr;
 
+    a {
+        color: var(--color-white);
+
+        &:hover {
+            text-decoration: underline;
+        }
+    }
+
     .header-left {
-        background-color: bisque;
         @include mix.flex-items-center();
 
         .logo {
@@ -27,7 +38,6 @@
     }
 
     .header-right {
-        background-color: beige;
         @include mix.flex-items-center();
         justify-content: flex-end;
 
