--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,14 +3,14 @@
 .main-content {
     width: 100%;
     height: 100vh;
-    position: relative;
+    position: absolute;
     top: 0;
     left: 0;
 
     .main-image {
         width: 100%;
-        object-fit: contain;
-        border: var(--test-border);
+        height: 100%;
+        object-fit: cover;
     }
 
     .main-controls {
