--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,4 +2,5 @@
     --color-white: #ffffff;
     --color-black: #000000;
     --test-border: 1px solid red;
+    --transition0-2: all 0.2s ease-in-out;
 }
